--- a/class/index.html
+++ b/class/index.html
@@ -49,8 +49,8 @@
   <div class="button ptr" onclick="sortByPts()">Sort by Total Points</div>
   <div class="button ptr" onclick="sortByASpts()">Sort by AS Points</div>
   <div class="button ptr" onclick="sortByMVpts()">Sort by MV Points</div>
-  <div class="button ptr" onclick="sortByAttendance()">Sort by Attendance</div>
-  <div class="button ptr" onclick="">Sort by Participation</div>
+  <div class="button ptr" onclick="sortByAtt()">Sort by Attendance</div>
+  <div class="button ptr" onclick="sortByTP()">Sort by Participation</div>
   <div class="button ptr" onclick="sortByGender()">Sort by Boy/Girl</div>
   <div class="button ptr" onclick="sortByBd()">Sort by Birthday</div>
   <div class="button ptr" onclick="sortByDateAdded()">Sort by Date Added</div>
