--- a/class/index.html
+++ b/class/index.html
@@ -18,7 +18,7 @@
         <div id="alertButton" class="roundButton2 ptr" onclick="pop(['mainPop'],['alertsPop'])">#</div>
         <div id="attCountButton" class="roundButton2 ptr" onclick="loadAttendees()">0</div>
         <div id="logButton" class="roundButton2 ptr" onclick="pop(['mainPop'],['logPop'])">F</div>
-        <div id="backupButton" class="roundButton2 ptr" onclick="pop(['mainPop'],['backupPop'])">B</div>
+        <div id="backupButton" class="roundButton2 ptr" onclick="populateBackup()">B</div>
     </div>
     <input id="searchMain" class="searchField" type="text" placeholder="search names" oninput="searchNames('searchMain','name')"/>
     <div id="nameList"></div>
