--- a/class/index.html
+++ b/class/index.html
@@ -675,6 +675,7 @@
     <p>attArr: <span id="attArr"></span></p>
     <p>promo: <span id="promo"></span></p>
     <p>randDraw: <span id="randDraw"></span></p>
+    <p>statsRanks: <span id="statsRanks"></span></p>
     <p>as: <span id="as"></span></p>
     <p>mv: <span id="mv"></span></p>
   </div>
