--- a/class/index.html
+++ b/class/index.html
@@ -287,7 +287,7 @@
       <table id="attProgressTable" class="progressBarTable"></table>
     </div>
 
-    <div id="totalParticipationTableDiv" class="ptr" onclick="infoAlert('Total participation is a combination of all the student\'s activity sheet points, memory verse points, and attendance.  A student who achieves a 100% total participation score will receive special recognition at the end of the year.',['studentStatsPop'],false,true)">
+    <div id="totalParticipationTableDiv" class="ptr" onclick="infoAlert('Participation is a combination of all the student\'s activity sheet points, memory verse points, and attendance.  A student who achieves a 100% total participation score will receive special recognition at the end of the year.',['studentStatsPop'],false,true)">
       <p id="totalParticipationTableP"></p>
       <table id="totalParticipationTable" class="progressBarTable"></table>
     </div>
