--- a/class/index.html
+++ b/class/index.html
@@ -20,7 +20,7 @@
         <div id="logButton" class="roundButton2 ptr" onclick="pop(['mainPop'],['logPop'])">F</div>
         <div id="backupButton" class="roundButton2 ptr" onclick="populateBackup()">B</div>
     </div>
-    <input id="searchMain" class="searchField" type="text" placeholder="search names" oninput="searchNames('searchMain','name')"/>
+    <input id="searchMain" class="searchField" type="text" placeholder="search names" oninput="searchNamesMain()"/>
     <div id="nameList"></div>
 </div>
 
