--- a/class/index.html
+++ b/class/index.html
@@ -223,7 +223,6 @@
       <p id="studentPopRankName"></p>
       <p id="studentPopName" class="ptr" onclick="toggleAtt()"></p>
       <p id="studentPopPts"></p>
-      <p id="studentPopClassRank"></p>
     </div>
   </div>
   <div>
@@ -287,13 +286,13 @@
       <table id="attProgressTable" class="progressBarTable"></table>
     </div>
 
-    <div id="totalParticipationTableDiv" class="ptr" onclick="infoAlert('Participation is a combination of all the student\'s activity sheet points, memory verse points, and attendance.  A student who achieves a 100% total participation score will receive special recognition at the end of the year.',['studentStatsPop'],false,true)">
+    <div id="totalParticipationTableDiv" class="ptr" onclick="infoAlert('Participation is a combination of all the student\'s activity sheet points, memory verse points, and attendance.  A student who achieves a 100% total participation score will receive special recognition at the end of the year.',['studentStatsPop'],false,true,20,'left')">
       <p id="totalParticipationTableP"></p>
       <table id="totalParticipationTable" class="progressBarTable"></table>
     </div>
 
     <div id="lbDiv">
-      <p style="text-align:center;">Leader Boards</p>
+      <p style="text-align:center;font-size:30px">Leader Boards</p>
       <div class="lb" id="totalPtsLb">
         <p class="lbTitle">Total Points</p>
         <div id="totalPtsLbList"></div>
