--- a/class/index.html
+++ b/class/index.html
@@ -136,7 +136,6 @@
 <div id="playGamePop" class="pop">
   <div class="navigationButtonContainer">
     <div class="backButton ptr" onclick="pop(['playGamePop'],['teamsListPop'])">f</div>
-    <div class="secretButton ptr"></div>
     <div class="homeButton ptr" onclick="goHome()">5</div>
   </div>
   <div id="teamPtsContainer">
@@ -551,9 +550,6 @@
       </tr>
     </table>
   </div>
-  <div class="lowerNavigationButtonContainer">
-    <div class="secretButton3 ptr" onclick="populateNames2()"></div>
-  </div>
 </div>
 
 <div id="mvPtsPop" class="pop">
@@ -591,9 +587,6 @@
         <td colspan="2" class="downloadOrPrint ptr" onclick="mvLinks()"><span class="downloadIcon">m &nbsp;&nbsp;</span>PRINT/DOWNLOAD</td>
       </tr>
     </table>
-  </div>
-  <div class="lowerNavigationButtonContainer">
-    <div class="secretButton3 ptr" onclick="populateNames2()"></div>
   </div>
 </div>
 
@@ -698,7 +691,7 @@
       <th>Insignia</th>
       <th>Rank</th>
       <th>Abbreviation</th>
-      <th>Pts</th>
+      <th>Points</th>
     </tr>
   </table>
   </div>
